@@ -36,7 +36,7 @@
  * 0 ==> server runs in multi-threaded mode (one thread for each connection and
  * one server background thread )
  */
-#define CONFIG_MMS_SINGLE_THREADED 0
+#define CONFIG_MMS_SINGLE_THREADED 1
 
 /*
  * Optimize stack for threadless operation - don't use semaphores
@@ -76,6 +76,9 @@
 
 /* Set to 1 to include Sampled Values support in the build. Otherwise set to 0 */
 #define CONFIG_IEC61850_SAMPLED_VALUES_SUPPORT 1
+
+/* Set to 1 to compile for edition 1 server - default is 0 to compile for edition 2 */
+#define CONFIG_IEC61850_EDITION_1 0
 
 #ifdef _WIN32
 
